# formation-Python_fondamentaux

./: .gitignore  404.html  Makefile  README.md  README_en.md  index.html  media_launch.sh  mkdocs.yml  pyproject.toml  requirements-xtra.txt  requirements.txt  setup.py
assets/: bbts12.csv  movieslist.csv  movieslist.txt  showsfiles.txt  showslist.csv  showslist_bad.csv  showslist_uncomplete.csv
demos/: 01-listes.ipynb  01_lists.ipynb  02_fonctions.ipynb  03_dicts.ipynb  04_except.ipynb  05_str.ipynb  06_collections_fonctions.ipynb  07_loops.ipynb  08-fonctions.ipynb  10-loops.ipynb  10_namedtuple.ipynb  11_files.ipynb  2-fonctions.ipynb  20_generateurs.ipynb  3-dictionnaires.ipynb  4-lists.ipynb  5-func.ipynb  6-tuple.ipynb  7-exceptions.ipynb  8-funcs.ipynb  9-strings.ipynb  dates_timezones.ipynb  dates_timezones_legacy.ipynb  demmo_12_clists.ipynb  demo_01_bases.ipynb  demo_02_listes.ipynb  demo_03_fonction.ipynb  demo_04_dict.ipynb  demo_04_func.ipynb  demo_06_exception.ipynb  demo_07_str.ipynb  demo_08_pack_unpack.ipynb  demo_09_tuples.ipynb  demo_10_lists.ipynb  demo_11_boucles.ipynb  demo_12_clists.ipynb  demo_14_objet.ipynb  demo_15_files.ipynb  demo_bases.ipynb  demo_break.py  (+53 more)
docs/: Makefile  conf.py  index.md  index.rst  make.bat  students_notes.rst
draft/: datasource.py  dates_timezones.ipynb  heating.py  start.py  templating.py
en/: index.html
exos/: exo_01b.py  exo_02.py  exo_03_01.py  exo_03_02.py  exo_04.py  exo_05.py  exo_dict.py  myhome.py
exos_correction/: __main__.py  exo_01a.py  exo_01b.py  exo_02.py  exo_02_02.py  exo_03_01.py  exo_03_02.py  (+8 more)
(+689 files in other folders)
